--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,8 +11,8 @@
   // },
   // "r2_buckets": [
   //   {
-  //     "binding": "MY_BUCKET",
-  //     "bucket_name": "my-bucket"
+  //     "binding": "TAGA3S_DEV_ASSETS_BUCKET",
+  //     "bucket_name": "taga3s-dev-assets"
   //   }
-  // ],
+  // ]
 }
