--- a/.github/workflows/check-codebase.yaml
+++ b/.github/workflows/check-codebase.yaml
@@ -12,5 +12,4 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
-      - run: bun format
-      - run: bun lint
+      - run: bun check
