Mask vars using .dev.vars

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ node_modules/
 # env
 .env
 .env.production
-.dev.vars
+.dev.vars*
 
 # logs
 logs/
@@ -28,6 +28,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
+# tools
+tools/cli/target
 
 # misc
 .DS_Store
