--- a/tools/sanpincha/Cargo.toml
+++ b/tools/sanpincha/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64 = "0.22.1"
 clap = { version = "4.5.32", features = ["derive"] }
 dotenv = "0.15.0"
 futures = "0.3.31"
 reqwest = { version = "0.12.14", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 tokio = { version = "1.40.0", features = ["full"] }
 tokio-macros = { version = "2.4.0" }
