--- a/tools/sanpincha/Cargo.toml
+++ b/tools/sanpincha/Cargo.toml
@@ -8,7 +8,7 @@ base64 = "0.22.1"
 clap = { version = "4.5.32", features = ["derive"] }
 dotenv = "0.15.0"
 futures = "0.3.31"
-reqwest = { version = "0.12.14", features = ["json"] }
+reqwest = { version = "0.12.14", features = ["json", "multipart"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.40.0", features = ["full"] }
