Implement og-generation-endpoint

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "taga3s-dev-images",
 	"type": "module",
 	"scripts": {
+		"fetch-assets": "curl -L 'https://unpkg.com/yoga-wasm-web/dist/yoga.wasm' -o src/packages/og/vendor/yoga.wasm && curl -L 'https://unpkg.com/@resvg/resvg-wasm/index_bg.wasm' -o src/packages/og/vendor/resvg.wasm",
 		"dev": "wrangler dev",
 		"deploy": "wrangler deploy --minify",
 		"lint": "bunx biome lint --write --unsafe ./src",
@@ -14,6 +15,11 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@cloudflare/workers-types": "^4.20250313.0",
-		"wrangler": "^4.0.0"
+		"@resvg/resvg-js": "^2.6.2",
+		"@resvg/resvg-wasm": "^2.6.2",
+		"@types/node": "^22.14.1",
+		"sharp": "^0.34.1",
+		"wrangler": "^4.0.0",
+		"yoga-wasm-web": "^0.3.3"
 	}
 }
