--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,5 +11,12 @@
       "bucket_name": "taga3s-dev-images",
       "binding": "taga3s_dev_images"
     }
+  ],
+  "rules": [
+    {
+      "type": "Text",
+      "globs": ["**/*.ttf"],
+      "fallthrough": true
+    }
   ]
 }
