--- a/.github/workflows/deploy-to-prod.yaml
+++ b/.github/workflows/deploy-to-prod.yaml
@@ -18,6 +18,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       
       - run: bun install
+      - run: bun fetch-assets
       
       - name: Publish to Cloudflare Workers
         uses: cloudflare/wrangler-action@v3
