--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"fetch-assets": "curl -L 'https://unpkg.com/yoga-wasm-web/dist/yoga.wasm' -o src/packages/og/vendor/yoga.wasm && curl -L 'https://unpkg.com/@resvg/resvg-wasm/index_bg.wasm' -o src/packages/og/vendor/resvg.wasm",
 		"dev": "wrangler dev",
-		"deploy": "wrangler deploy --minify",
+		"deploy": "wrangler deploy --minify --config wrangler.jsonc",
 		"lint": "bunx biome lint --write --unsafe ./src",
 		"format": "bunx biome format --write ./src package.json tsconfig.json biome.json",
 		"check": "bunx biome ci --formatter-enabled=true --linter-enabled=true --organize-imports-enabled=false ./src package.json tsconfig.json biome.json"
@@ -18,6 +18,7 @@
 		"@resvg/resvg-js": "^2.6.2",
 		"@resvg/resvg-wasm": "^2.6.2",
 		"@types/node": "^22.14.1",
+		"satori": "^0.12.2",
 		"sharp": "^0.34.1",
 		"wrangler": "^4.0.0",
 		"yoga-wasm-web": "^0.3.3"
